[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/SpaceInvaders.png" type="Texture" id=1]
[ext_resource path="res://assets/sfx/ufo.ogg" type="AudioStream" id=2]
[ext_resource path="res://invaders/UFO.gd" type="Script" id=3]
[ext_resource path="res://components/die_component.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/lose04.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/rescue.ogg" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.5
height = 3.5

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_left"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 304.0, -16.0 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -27, -0.4, 2.4, 0.3, 10.8, 30, -0.4, -1.8, 0.3, -7.8, -29.4, -0.25, 0, 0.3, 0, 24.6, -0.4, 2.4, 0.3, -4.8, -29.4, -0.25, 0, 0.25, 0, 30, -0.5, -17.4, 0.4, -11.4, -25.8, -0.25, 0, 0.2, 15.6, 29.4, -0.4, 3.6, 0.3, -7.2, -28.2, -0.25, 0, 0.25, 0, 30, -0.5, -10.2, 0.4, -1.8, -30.6, -0.25, 0, 0.25, 0, 30.6, -0.4, 2.4, 0.4, -12, -29.4, -0.25, 0, 0.25, 0, 34.2, -0.4, -21.6, 0.3, -15.6, -29.4, -0.25, 0, 0.25, 0, 29.4, -0.353299, -16.8, 0.3, 1.2, -29.4, -0.25, 0, 0.25, 0, 30.6, -0.5, 1.2, 0.3, 2.4, -29.4, -0.25, 0, 0.25, 0, 30.6, -0.3, -9.6, 0.3, 8.4, -29.4, -0.25, 0, 0.25, 0, 33, -0.397547, -4.8, 0.302453, -4.8, -30.6, -0.25, 0, 0.400001, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 2, 2.4, 3, 3.5, 4, 4.4, 5, 5.6, 6.1, 6.5, 7.1, 7.5, 8, 8.4, 9, 9.6, 10, 10.5, 10.9975, 11.4, 12 )
}

[sub_resource type="Animation" id=3]
resource_name = "move_right"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, 304.0 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -27, -0.4, 2.4, 0.3, 10.8, 30, -0.4, -1.8, 0.3, -7.8, -29.4, -0.25, 0, 0.3, 0, 24.6, -0.4, 2.4, 0.3, -4.8, -29.4, -0.25, 0, 0.25, 0, 30, -0.5, -17.4, 0.4, -11.4, -25.8, -0.25, 0, 0.2, 15.6, 29.4, -0.4, 3.6, 0.3, -7.2, -28.2, -0.25, 0, 0.25, 0, 30, -0.5, -10.2, 0.4, -1.8, -30.6, -0.25, 0, 0.25, 0, 30.6, -0.4, 2.4, 0.4, -12, -29.4, -0.25, 0, 0.25, 0, 34.2, -0.4, -21.6, 0.3, -15.6, -29.4, -0.25, 0, 0.25, 0, 29.4, -0.353299, -16.8, 0.3, 1.2, -29.4, -0.25, 0, 0.25, 0, 30.6, -0.5, 1.2, 0.3, 2.4, -29.4, -0.25, 0, 0.25, 0, 30.6, -0.3, -9.6, 0.3, 8.4, -29.4, -0.25, 0, 0.25, 0, 33, -0.397547, -4.8, 0.302453, -4.8, -30.6, -0.25, 0, 0.400001, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.4, 2, 2.4, 3, 3.5, 4, 4.4, 5, 5.6, 6.1, 6.5, 7.1, 7.5, 8, 8.4, 9, 9.6, 10, 10.5, 10.9975, 11.4, 12 )
}

[node name="UFO" type="Area2D"]
position = Vector2( -16, 0 )
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="CollisionLaser" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move_right"
anims/RESET = SubResource( 2 )
anims/move_left = SubResource( 4 )
anims/move_right = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
max_distance = 200.0
attenuation = 2.0

[node name="DieComponent" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" parent="DieComponent" index="2"]
stream = ExtResource( 5 )

[node name="RescueArea" type="Area2D" parent="."]
rotation = -1.5708
collision_layer = 16
collision_mask = 32

[node name="CollisionRescue" type="CollisionShape2D" parent="RescueArea"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RescueStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="." to="." method="_on_UFO_area_entered"]

[editable path="DieComponent"]
